force-app/main/default/objects/SCC_Object_Conversion_Field_Map__mdt/SCC_Object_Conversion_Field_Map__mdt.object-meta.xml
<CustomObject>
    <label>Object Conversion Field Map</label>
    <pluralLabel>Object Conversion Field Maps</pluralLabel>
</CustomObject>