force-app/main/default/objects/SCC_Object_Conversion_Field_Map__mdt/fields/Fixed_Value__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fixed Value</label>
    <type>Checkbox</type>
</CustomField>