force-app/main/default/objects/SCC_Object_Conversion_Field_Map__mdt/fields/Fixed_Value_Type__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Value_Type__c</fullName>
    <inlineHelpText>Date type can have Date String or differ from today.</inlineHelpText>
    <label>Fixed Value Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boolean</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
                <default>true</default>
                <label>Text</label>
            </value>
            <value>
                <fullName>Variable</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Reference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>