force-app/main/default/objects/SCC_Object_Conversion_Field_Map__mdt/fields/NullToZero__c.field-meta.xml
<CustomField>
    <fullName>NullToZero__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NullToZero</label>
    <type>Checkbox</type>
</CustomField>