force-app/main/default/objects/SCC_Object_Conversion_Field_Map__mdt/fields/Same_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Same_Field_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Same Field Name</label>
    <type>Checkbox</type>
</CustomField>