force-app/main/default/objects/SCC_Object_Conversion_Field_Map__mdt/fields/Source_Field__c.field-meta.xml
<CustomField>
    <fullName>Source_Field__c</fullName>
    <label>Source Field</label>
    <length>70</length>
    <type>Text</type>
</CustomField>