force-app/main/default/objects/SCC_Object_Conversion_Field_Map__mdt/fields/Value_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Value_Conversion__c</fullName>
    <label>Value Conversion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>STR.UPPER</fullName>
                <default>true</default>
                <label>STR.UPPER</label>
            </value>
            <value>
                <fullName>STR.LOWER</fullName>
            </value>
            <value>
                <fullName>DATE.GMT</fullName>
            </value>
            <value>
                <fullName>NUMBERSTR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>